# p4_json_parse

./: .digital_structs.h.swp  .gitignore  .gitmodules  .handlers.cpp.swp  .handlers.h.swp  .main.cpp.swp  CMakeLists.txt  Makefile  TODO.md  a.out  basic.json  digital.cpp  digital.h  digital_structs.h  handlers.cpp  handlers.h  main.cpp  parser.c  parser.cpp  parser.h
cmake/: FindRapidJSON.cmake
examples/: basic.p4
include/circuits/: circuit.h  circuit_components.h
include/p4aig/: p4aig.h
include/p4parser/: p4parser.h
include/parser/: parser.h
src/: CMakeLists.txt
src/circuits/: circuits.cpp
src/p4aig/: p4aig.cpp
src/p4parser/: handlers.cpp  handlers.h  p4parser.cpp
src/parser/: handlers.cpp  handlers.h  parser.cpp
test/: CMakeLists.txt
test/src/: test_main.cpp
